[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Bad_Guys/Boss/BG-104-Boss/BG_104_Boss.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Bad_Guys/Boss/BG-104-Parts/BG_104_Boss_Hit_Spot.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Bad_Guys/Boss/Boss-104/BG_104_Boss.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Bad_Guys/Boss/BG-104-Parts/BG_104_Boss_Cannon_01.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Map_Parts/MP-52-Door-BG-Spawner.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 53.9997
height = 168.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 44 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 51, 149 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 128, 72 )

[sub_resource type="Animation" id=5]
resource_name = "Hit"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Bottom_Sprite_Front:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody2D2/CollisionShape2D4:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="BG_104_Boss" type="Node2D"]
script = ExtResource( 3 )

[node name="Bottom_Sprite_Front" type="Sprite" parent="."]
z_index = 2
z_as_relative = false
texture = ExtResource( 1 )
hframes = 7
frame = 4

[node name="Bottom_Sprite_Back" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )
hframes = 7
frame = 5

[node name="Top_Sprite_Front" type="Sprite" parent="."]
z_index = 2
z_as_relative = false
texture = ExtResource( 1 )
hframes = 7
frame = 3

[node name="Top_Sprite_Back" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )
hframes = 7
frame = 2

[node name="StaticBody2D" type="StaticBody2D" parent="."]
z_index = 2
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -9, 148 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -18, 429 )
shape = SubResource( 2 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -19, 197 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2( 62, 330 )
shape = SubResource( 3 )
disabled = true

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
z_index = 2
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( -19, 313 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 5 )

[node name="Parts" type="Node2D" parent="."]

[node name="BG_104_Hit_Spot" parent="Parts" instance=ExtResource( 2 )]
position = Vector2( -56, 299 )
z_index = 2
z_as_relative = false

[node name="BG_104_Boss_Cannon_01" parent="Parts" instance=ExtResource( 4 )]
position = Vector2( 49, 30 )
z_index = 3
z_as_relative = false

[node name="BG_104_Boss_Cannon_02" parent="Parts" instance=ExtResource( 4 )]
position = Vector2( 69, 29 )
z_index = 3
z_as_relative = false
cannon_num = 2

[node name="BG_104_Boss_Cannon_03" parent="Parts" instance=ExtResource( 4 )]
position = Vector2( -106, 41 )
z_index = -1
cannon_num = 3

[node name="BG_104_Boss_Cannon_04" parent="Parts" instance=ExtResource( 4 )]
position = Vector2( -88, 40 )
z_index = -1
cannon_num = 4

[node name="MP-52-BG-3-Spawner" parent="." instance=ExtResource( 5 )]
position = Vector2( -14, 94 )
z_as_relative = false
right = false
